--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheeet" href="Assets/css/style.css">
+
+    <meta name="description" content="Expense Tracker">
+    <meta name="keywords" content="expense, tracker, finance, calculator, money, budget">
+    <meta name="author" content="Salina Thapa">
+
     <title>Expense Tracker</title>
 </head>
 <body>
+    <header>
+        <h1>EXPENSE TRACKER</h1>
+        <nav>
+            <p title="Learn more about the budget calculator" id="about">About</p>
+        </nav>
+    </header>
+
     
 </body>
 </html>
