--- a/index.html
+++ b/index.html
@@ -1,25 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheeet" href="Assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <meta name="description" content="Expense Tracker">
     <meta name="keywords" content="expense, tracker, finance, calculator, money, budget">
     <meta name="author" content="Salina Thapa">
 
     <title>Expense Tracker</title>
+    <script src="https://kit.fontawesome.com/2d69e80447.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <header>
         <h1>EXPENSE TRACKER</h1>
-        <nav>
-            <p title="Learn more about the budget calculator" id="about">About</p>
-        </nav>
+        <i class="fa-solid fa-wallet" style="color: #000000;"></i>
     </header>
 
-    
+    <section class="calculator">
+        <form id="income" aria-label="income">
+            <h2>Income:</h2>
+            <div id="income-container">
+                 <input type="number" placeholder="Income amount" class="income" required aria-label="Income amount input field">
+            </div>
+
+        <div class="expense-type">
+            <div id="currency-box">
+                <label for="currency" aria-label="Transaction Type">Transaction Type:</label>
+                <select id="currency" aria-label="Currency selection options">
+                    <option value="Choose">Choose...</option>
+                        <option value="Card">Card</option>
+                        <option value="Cash">Cash</option>
+                        <option value="Cheque">Cheque</option>
+                        <option value="Transfer">Transfer</option>
+                        <option value="Other">Other</option>
+                </select>
+            </div>
 </body>
 </html>
