--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         <form id="expenses" aria-label="expenses">
             <div class="transaction-name">
                 <label for="transaction-name" aria-label="Transaction name">Name:</label>
-                <input type="text" id="transaction-name">
+                <input type="text" placeholder="Name" id="transaction-name">
             </div>
             <div class="transaction-amount">
                 <label for="transaction-amount" aria-label="Transaction amount">Amount:</label>
-                <input type="number" id="transaction-amount">
+                <input type="number" placeholder="Amount" id="transaction-amount">
             </div>
             <div class="transaction-type">
                 <label for="transaction" aria-label="Transaction Type">Transaction Type: </label>
@@ -95,5 +95,7 @@
         </div>
     </footer>
 
+    <!--JavaScript-->
+    <script src="Assets/JS/script.js">
 </body>
 </html>
